// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating vite stats v4 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26821,
      "name": "assets/index-b7a309be.js",
      "normalized": "assets/index-*.js",
      "size": 72360,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-amd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-b7a309be.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26812,
      "name": "assets/index-7de22500.js",
      "normalized": "assets/index-*.js",
      "size": 72342,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-cjs",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-7de22500.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26821,
      "name": "assets/index-646c8a11.js",
      "normalized": "assets/index-*.js",
      "size": 72356,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-iife",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-646c8a11.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-5458a54a.js",
      "normalized": "assets/index-*.js",
      "size": 72423,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-umd",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-5458a54a.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-2fd1a797.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-2fd1a797.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-2fd1a797.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-2fd1a797.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v4 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 27198,
      "name": "assets/index-320c8eaf.js",
      "normalized": "assets/index-*.js",
      "size": 73114,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "3.29.4",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-320c8eaf.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26821,
      "name": "assets/index-D0r0olUW.js",
      "normalized": "assets/index-*.js",
      "size": 72360,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-D0r0olUW.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26812,
      "name": "assets/index-_9bu_Rar.js",
      "normalized": "assets/index-_9bu_Rar.js",
      "size": 72342,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-_9bu_Rar.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-Cq3U4pkx.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cq3U4pkx.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-Cq3U4pkx.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cq3U4pkx.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 27169,
      "name": "assets/index-Cq3U4pkx.js",
      "normalized": "assets/index-*.js",
      "size": 73071,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cq3U4pkx.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26821,
      "name": "assets/index-B31DUBuo.js",
      "normalized": "assets/index-*.js",
      "size": 72356,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-B31DUBuo.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-BFgpG9Ne.js",
      "normalized": "assets/index-*.js",
      "size": 72423,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-umd",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-BFgpG9Ne.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-Cn9uVtOh.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-system",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cn9uVtOh.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 26850,
      "name": "assets/index-Cn9uVtOh.js",
      "normalized": "assets/index-*.js",
      "size": 72405,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-vite-v5-system",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cn9uVtOh.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;

exports[`Generating vite stats v5 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 27198,
      "name": "assets/index-Cq3U4pkx.js",
      "normalized": "assets/index-*.js",
      "size": 73114,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "4.16.2",
  },
  "chunks": [
    {
      "entry": true,
      "files": [
        "assets/index-Cq3U4pkx.js",
      ],
      "id": "index",
      "initial": false,
      "names": [
        "index",
      ],
      "uniqueId": "0-index",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./vite/modulepreload-polyfill.js",
      "size": 1548,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 560242,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/src/main.js",
      "size": 163,
    },
    {
      "chunkUniqueIds": [
        "0-index",
      ],
      "name": "./test-apps/vite/index.html",
      "size": 0,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/vite-plugin",
    "version": "0.0.1-beta.11",
  },
  "version": "2",
}
`;
